added endpoitns for artist and space :D
